--- a/documentacion/templates/documentacion/dashboard.html
+++ b/documentacion/templates/documentacion/dashboard.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="fw-bold text-primary">Mis Proyectos</h2>
-    <a href="{% url 'crear_proyecto' %}" class="btn btn-success">+ Nuevo Proyecto</a>
+    <a href="{% url 'crear_proyecto' %}" class="btn btn-outline-success btn-sm">+ Nuevo Proyecto</a>
 </div>
 
 {% if proyectos %}
@@ -18,8 +18,15 @@
                         <p class="card-text text-muted small">
                             {{ proyecto.descripcion|truncatechars:100 }}
                         </p>
-                        <a href="{% url 'detalle_proyecto' proyecto.id %}" class="btn btn-outline-primary btn-sm">Ver Detalles</a>
-                        <a href="{% url 'editar_proyecto' proyecto.id %}" class="btn btn-outline-warning btn-sm">Editar</a>
+                        <a href="{% url 'detalle_proyecto' proyecto.id %}" class="btn btn-outline-primary btn-sm">📄Ver Detalles</a>
+                        <a href="{% url 'editar_proyecto' proyecto.id %}" class="btn btn-outline-warning btn-sm">✏️Editar</a>
+                        <!--PARA ELIMINAR PROYECTO-->
+                        <form action="{% url 'eliminar_proyecto' proyecto.id %}" method="POST" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('¿Estás seguro de que deseas eliminar este proyecto? Esta acción no se puede deshacer.')">
+                                🗑️ Eliminar
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
