--- a/documentacion/templates/documentacion/editar_proyecto.html
+++ b/documentacion/templates/documentacion/editar_proyecto.html
@@ -4,7 +4,7 @@
 {% block title %}Editar Proyecto | DocAI{% endblock %}
 
 {% block content %}
-<div class="container mt-5" style="max-width: 600px;">
+<div class="container mt-1" style="max-width: 600px;">
     <div class="card shadow">
         <div class="card-header bg-primary text-white text-center">
             <h4 class="mb-0">Editar Proyecto</h4>
@@ -21,9 +21,9 @@
                     {{ form.descripcion|add_class:"form-control" }}
                 </div>
                 <div class="mt-3">
-                    <button type="submit" class="btn btn-success w-50">Guardar Cambios</button>
+                    <button type="submit" class="btn btn-outline-success btn-sm">✅Guardar Cambios</button>
                     
-                    <a href="{% url 'dashboard' %}" class="btn btn-danger w-50">cancelar</a>
+                    <a href="{% url 'dashboard' %}" class="btn btn-outline-danger btn-sm">❌cancelar</a>
                 </div>
                 
             </form>
