--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
 <head>
 
     <meta charset="UTF-8">
-    
+    <link rel="icon" href="{% static 'img/logo.png' %}" type="image/x-icon">
     <title>{% block title %}DocAI{% endblock %} </title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap 5 -->
@@ -30,11 +31,11 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Panel</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">📋Panel</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">🔐Cerrar sesión</a></li>
                 {% else %}
-                    <li class="nav-item"><a class="btn btn-primary ms-2" href="{% url 'login' %}">Iniciar sesión</a></li>
-                    <li class="nav-item"><a class="btn btn-primary ms-2" href="{% url 'signup' %}">Registrarse</a></li>
+                    <li class="nav-item"><a class="btn btn-primary ms-2" href="{% url 'login' %}">🧑‍💻Iniciar sesión</a></li>
+                    <li class="nav-item"><a class="btn btn-primary ms-2" href="{% url 'signup' %}">📝Registrarse</a></li>
                 {% endif %}
             </ul>
         </div>
@@ -60,3 +61,9 @@
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
+<!-- codigo nuevo  -->
+<script type="module">
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    mermaid.initialize({ startOnLoad: true });
+  </script>
+  
