--- a/documentacion/templates/documentacion/editar_proyecto.html
+++ b/documentacion/templates/documentacion/editar_proyecto.html
@@ -7,7 +7,7 @@
 <div class="container mt-1" style="max-width: 600px;">
     <div class="card shadow">
         <div class="card-header bg-primary text-white text-center">
-            <h4 class="mb-0">Editar Proyecto</h4>
+            <h4 class="mb-0">✏️Editar Proyecto</h4>
         </div>
         <div class="card-body">
             <form method="post" novalidate>
