--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,12 @@
 {% block title %}Inicio | DocAI{% endblock %}
 
 {% block content %}
-<section class="bg-light py-5 text-center">
-    <div class="container">
-        <h1 class="display-3 fw-bold text-primary mb-3 animate__animated animate__fadeInDown">Bienvenido a <span class="text-dark">DocAI</span></h1>
+<!--codigo para el fondo y y la bienvenida-->
+<section class="py-5 text-center" style="background-image: url('/static/img/fondo.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="container bg-light bg-opacity-75 rounded p-4">
+        <h1 class="display-3 fw-bold text-primary mb-3 animate__animated animate__fadeInDown">
+            Bienvenido a <span class="text-dark">DocAI</span>
+        </h1>
         <p class="lead text-muted animate__animated animate__fadeInUp">
             Plataforma inteligente para la generación y gestión de documentación de software.
         </p>
