--- a/documentacion/templates/documentacion/editar_artefacto.html
+++ b/documentacion/templates/documentacion/editar_artefacto.html
@@ -36,7 +36,13 @@
                         <div class="text-danger small">{{ form.titulo.errors }}</div>
                     {% endif %}
                 </div>
-
+                <div class="mb-3">
+                    <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo de artefacto</label>
+                    {{ form.tipo|add_class:"form-select" }}
+                    {% if form.tipo.errors %}
+                        <div class="text-danger small">{{ form.tipo.errors }}</div>
+                    {% endif %}
+                </div>
                 <div class="mb-3">
                     <label for="{{ form.contenido.id_for_label }}" class="form-label">Contenido</label>
                     {{ form.contenido|add_class:"form-control" }}
@@ -55,4 +61,3 @@
     </div>
 </div>
 {% endblock %}
-
