--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,10 @@
         </p>
         <div class="mt-4">
             {% if not user.is_authenticated %}
-                <a href="{% url 'signup' %}" class="btn btn-primary btn-lg shadow-sm me-2 animate__animated animate__fadeInLeft">📝Comenzar</a>
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary btn-lg shadow-sm animate__animated animate__fadeInRight">🧑‍💻Iniciar sesión</a>
+                <a href="{% url 'signup' %}" class="btn btn-outline-primary btn-lg shadow-sm me-2 animate__animated animate__fadeInLeft">📝Comenzar</a>
+                <a href="{% url 'login' %}" class="btn btn-outline-primary btn-lg shadow-sm me-2 animate__animated animate__fadeInRight">🧑‍💻Iniciar sesión</a>
             {% else %}
-                <a href="{% url 'dashboard' %}" class="btn btn-primary btn-lg shadow-sm animate__animated animate__fadeIn">📋Ir al Panel</a>
+                <a href="{% url 'dashboard' %}" class="btn btn-outline-primary btn-lg shadow-sm animate__animated animate__fadeIn">📋Ir al Panel</a>
             {% endif %}
         </div>
     </div>
