--- a/documentacion/templates/documentacion/editar_artefacto.html
+++ b/documentacion/templates/documentacion/editar_artefacto.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo de artefacto</label>
-                    {{ form.tipo|add_class:"form-select" }}
+                    {{ form.tipo|add_class:"form-control" }}
                     {% if form.tipo.errors %}
                         <div class="text-danger small">{{ form.tipo.errors }}</div>
                     {% endif %}
