--- a/documentacion/templates/documentacion/ver_artefacto.html
+++ b/documentacion/templates/documentacion/ver_artefacto.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    {% if artefacto.titulo in "Diagrama de flujo Diagrama de clases Diagrama de Entidad-Relacion Diagrama de secuencia Diagrama de estado Diagrama de C4" %}
+    {% if artefacto.titulo in "Diagrama de flujo Diagrama de clases Diagrama de Entidad-Relacion Diagrama de secuencia Diagrama de estado Diagrama de C4-contexto Diagrama de C4-contenedor Diagrama de C4-implementación" %}
     <div class="card p-3 my-4 shadow border-info">
         <h5 class="text-center text-white bg-info">🧩 Diagrama generado</h5>
 
