--- a/documentacion/templates/documentacion/editar_artefacto.html
+++ b/documentacion/templates/documentacion/editar_artefacto.html
@@ -53,8 +53,8 @@
 
                 <div class="d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-success btn-sm">💾 Guardar Cambios</button>
-                    <button type="submit" name="regenerar" value="1" class="btn btn-warning btn-sm">♻️ Regenerar con IA</button>
-                    <a href="{% url 'ver_artefacto' artefacto.id %}" class="btn btn-secondary btn-sm">❌ Cancelar</a>
+                    <button type="submit" name="regenerar" value="1" class="btn btn-outline-warning btn-sm">♻️ Regenerar con IA</button>
+                    <a href="{% url 'ver_artefacto' artefacto.id %}" class="btn btn-outline-danger btn-sm">❌ Cancelar</a>
                 </div>
             </form>
         </div>
