--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -37,7 +37,7 @@
                         {% endfor %}
 
                         <div class="d-flex justify-content-between align-items-center">
-                            <a href="{% url 'dashboard' %}" class="btn btn-secondary">⬅️ Volver</a>
+                            <a href="{% url 'dashboard' %}" class="btn btn-outline-warning btn-sm">⬅️ Volver</a>
                             <button type="submit" class="btn btn-outline-success btn-sm">💾 Guardar nueva contraseña</button>
                         </div>
                     </form>
