--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -88,12 +88,11 @@ validarCampo("id_password2", null, "Las contraseñas no coinciden.", "id_passwor
 </script>
 
 <style>
-/* ✅ Corrige espacio izquierdo de los inputs */
+
 .form-control {
-    padding-left: 0.75rem !important; /* o el valor que desees */
+    padding-left: 0.75rem !important;
 }
 
-/* ✅ Mueve el ícono de validación al lado derecho */
 .form-control.is-valid,
 .form-control.is-invalid {
     padding-right: 2.5rem !important;
